# lightbulb

./: .gitignore  pyproject.toml
.github/workflows/: build.yaml
src/lightbulb/: __init__.py  __main__.py  app.py  layout.py
src/lightbulb/database/: db_management.py  db_manager.py  struct_forecast_data.py  struct_ols_model.py  struct_prediction_data.py  struct_results_data.py  struct_test_data.py  struct_train_data.py
src/lightbulb/pages/: __init__.py  page_main_data.py  page_main_home.py  page_main_models.py  pages_config.py
src/lightbulb/pages/page_models/: data_preview.py  delete_win.py  description_card.py  description_win.py  model_form.py  upload_win.py
src/lightbulb/utils/: __init__.py  split_list_equal.py
src/moonlight/: __init__.py  app.py
src/moonlight/database/: __init__.py  db_management.py  db_manager.py  struct_base.py  struct_forecast_data.py  struct_ols_model.py  struct_prediction_data.py  struct_test_data.py  struct_train_data.py
src/moonlight/pages/: __init__.py  page_main_about.py  page_main_data.py  page_main_models.py  pages_config.py
src/moonlight/pages/page_models/: delete_win.py  description_card.py  description_win.py  model_form.py  upload_win.py
